--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "test": "mocha --require test/setup.js",
     "start": "node src/server.js",
     "migrate": "postgrator --config postgrator-config.js",
+    "migrate:production": "heroku run npm run migrate",
     "predeploy": "npm audit",
     "deploy": "git push heroku master",
+    "postdeploy": "npm run migrate:production",
     "dev": "nodemon src/server.js"
   },
   "keywords": [],
@@ -22,6 +24,7 @@
     "knex": "^0.21.12",
     "morgan": "^1.10.0",
     "pg": "^8.5.1",
+    "postgrator-cli": "^3.2.0",
     "winston": "^3.3.3",
     "xss": "^1.0.8"
   },
@@ -29,7 +32,6 @@
     "chai": "^4.2.0",
     "mocha": "^8.2.0",
     "nodemon": "^2.0.6",
-    "postgrator-cli": "^3.2.0",
     "supertest": "^5.0.0"
   }
 }
